formating of A2 and A3

--- a/Assignments/Assignment3_solutions.ipynb
+++ b/Assignments/Assignment3_solutions.ipynb
@@ -55,9 +55,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a.The interior of ad-dimensional hypersphere of unit radius is defined by the conditionx21+x22+···+x2d≤1. Write a program that finds the volume of a hypersphere using the midpointapproximation. If you are clever, you can write a program that does any dimension using arecursive method. Test your program ford= 2 andd= 3, and then find the volume ford= 4andd= 5. Begin with h= 0.2, and decreasehuntil your results do not change by more than1%.\n",
-    "\n",
-    "### b.Repeat part (a) using a Monte Carlo method. For each value ofn, repeat the calculation severaltimes to obtain a rough estimate of the random error. Is your program applicable for anydeasier to write than in part (a)?"
+    "### a. The interior of a $d$-dimensional hypersphere of unit radius is defined by the condition $x^2_1+x^2_2+\\cdots+x^2_d \\le $. Write a program that finds the volume of a hypersphere using the midpoint approximation. If you are clever, you can write a program that does any dimension using a recursive method. Test your program for $d= 2$ and $d= 3$, and then find the volume for$d= 4$ and $d= 5$. Begin with $h= 0.2$, and decrease $h$ until your results do not change by more than 1%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b. Repeat part (a) using a Monte Carlo method. For each value of $n$, repeat the calculation several times to obtain a rough estimate of the random error. Is your program applicable for any $d$ easier to write than in part (a)?"
    ]
   },
   {
@@ -71,21 +76,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a. Estimate the integral off(x) =e−xin the interval 0≤x≤1 using the sample mean MonteCarlo method withn= 104,n= 106, andn= 108. Determine the exact integral analyticallyand estimate thendependence of the actual error. How does your estimated error comparewith the error estimate obtained from the relation (11.23)?"
+    "### a. Estimate the integral of $f(x) =e^{-x}$ in the interval $0\\le x \\le 1$ using the sample mean Monte Carlo method with $n= 10^4$, $n= 10^6$, and $n= 10^8$. Determine the exact integral analytically and estimate the $n$ dependence of the actual error. How does your estimated error compare with the error estimate obtained from the relation (11.23)?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b.Generate 19 additional measurements of the integral each withn= 106samples.  Computethe standard deviation of the 20 measurements. Is the magnitude of this standard deviationof the means consistent with your estimates of the error obtained in part (a)? Compute thehistogram of the additional measurements and confirm that the distribution of the measurementsis consistent with a Gaussian distribution"
+    "### b.Generate 19 additional measurements of the integral each with $n= 10^6$ samples.  Compute the standard deviation of the 20 measurements. Is the magnitude of this standard deviation of the means consistent with your estimates of the error obtained in part (a)? Compute the histogram of the additional measurements and confirm that the distribution of the measurements is consistent with a Gaussian distribution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### d. Estimate the integral∫10e−x2dx(11.24)to two decimal places usingσ/√nas an estimate of the probable error."
+    "### d. Estimate the integral $$\\int_0^1 e^{-x^2}dx$$ to two decimal places using $\\sigma / \\sqrt{n}$ as an estimate of the probable error."
    ]
   },
   {
@@ -99,15 +104,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a .Choosef(x) =√1−x2and considerp(x) =A(1−x) forx≥0.  What is the value ofAthat normalizesp(x) in the unit interval [0,1]? What is the relation for the random variablexin terms ofrfor this form ofp(x)? What is the variance off(x)/p(x) in the unit interval?Evaluate the integral∫10f(x)dxusingn= 106and estimate the probable error of your result."
+    "### a. Choose $f(x)=\\sqrt{1-x^2}$ and consider $p(x) =A(1-x)$ for $x \\ge 0$.  What is the value of $A$ that normalizes $p(x)$ in the unit interval $[0,1]$? What is the relation for the random variable $x$ in terms of $r$ for this form of $p(x)$? What is the variance of $f(x)/p(x)$ in the unit interval? Evaluate the integral $\\int_0^1 f(x)dx$ using $n= 10^6$ and estimate the probable error of your result."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b.Choosep(x) =Ae−λxand evaluate the integral∫π01x2+ cos2xdx.(11.47)Determine the value ofλthat minimizes the variance of the integrand."
+    "### b. Choose $p(x) =A e^{-\\lambda x}$ and evaluate the integral $$\\int_0^{\\pi} \\frac{1}{x^2+ \\cos^2 x dx}.$$ Determine the value of $\\lambda$ that minimizes the variance of the integrand."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
